# llarmy

./: .gitignore  .pre-commit-config.yaml  DEV_README.md  LICENSE  README.md  activate_dev.bat  pyproject.toml
notebooks_examples/Cadets/: llagent_example_ocr.ipynb
scripts/: build.py  format.py  lint.py  setup_dev.py  test.py  upload_pypi.py  upload_testpypi.py
src/llarmy/: __init__.py  test.py
src/llarmy/equipment/: reading_text_ocr.py
src/llarmy/equipment/reading_text_ocr/: __init__.py  reading_text_ocr.py
src/llarmy/llagents/: llagent_cadet.py
tests/: test_llarmy.py
